atualizando api e css

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/cadastro/cadastro.css">
+    <link rel="stylesheet" href="/alunos-front-end/cadastro/cadastro.css">
     <title>Cadastro de Alunos</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         alunoData[key] = value;
     });
 
-    fetch('http://localhost:8080/alunos', {
+    fetch('https://curso-n39o.onrender.com/alunos', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json' // Configura o cabeçalho Content-Type para JSON
